--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.2",
     "colors": "^1.1.2",
-    "meteor-node-stubs": "~0.2.4"
+    "meteor-node-stubs": "~0.2.4",
+    "web3": "^0.19.0"
   }
 }
