--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.2",
+    "bignumber.js": "^4.0.2",
     "colors": "^1.1.2",
     "meteor-node-stubs": "~0.2.4",
     "web3": "^0.19.0"
